CSS - white slide surrounding lesson landing, lesson and quiz. Carousel positioned correctly and not cut off on all pages

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -82,7 +82,7 @@
 #welcome-slide-grid{
   grid-column-start:2;
   /* grid-column-end: 8; */
-  grid-row-start: 5;
+  grid-row-start: 10;
   grid-row-end: span 2;
   /* grid-row-end: 2;
   grid-column-start: 1; */
@@ -93,47 +93,17 @@
 
 
 /* INSTRUMENT MENU */
-#menu-grid{
+.menu-grid{
   grid-column-start:2;
   grid-column-end: span 1;
-  grid-row-start: 4;
+  grid-row-start: 2;
+  grid-row-end: span 8;
 
   /* grid-column-start: 1;
   grid-column-end: span col2-start;
   grid-row-start: 2;
   grid-row-end: span 1; */
 }
-
-
-
-/* OLD */
-/* ...................... */
-
-/* INSTRUMENT CONTAINER */
-/* #grid-container {
-  display: grid;
-  width: 100%;
-  height: 250px;
-  grid-template-areas:
-  "head head"
-  "nav nav"
-  "main main";
-  grid-template-rows:200px 200px 200px;
-  grid-template-columns: 150px 150px;
-} */
-
-/* ICON */
-/* #icon-grid{
-  grid-area: head;
-}
-
-#menu-grid{
-  grid-area: nav;
-}
-
-#main-content{
-  grid-area: main;
-} */
 
 
 
