--- a/client/src/components/InstrumentMenu.css
+++ b/client/src/components/InstrumentMenu.css
@@ -1,6 +1,6 @@
 .instrument-select{
-    width: 240px;
-    height: 300px;
+    width: 180px;
+    height: 180px;
     margin: 0px 15px;
     padding: 0px;
     border-style: solid;
